--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 language: java
+jdk:
+  -oraclejdk8
 
 #Обычный режим для быстрой сборки
 sudo: false
 
-notifications:
-  email:
-    recipients:
-      - kadyrow1506@gmail.com
-
-        on_success: never
-        on_failure: always
