--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 {
   "language": "java",
+  "os": [
+      "linux"
+  ],
+  "dist": "xenial",
   "jdk": [
       "-oraclejdk8"
   ],
   "sudo": false
 }
-
